Agregar pruebas unitarias de software: ProductoService, VentaService, UsuarioService
- ProductoServiceTest: 7 tests (listar, buscar, reducirStock, validaciones)
- VentaServiceTest: 5 tests (registrar venta, stock insuficiente, anular, validaciones)
- UsuarioServiceTest: 6 tests (BCrypt, buscarPorEmail, desactivar, actualizar)
- Total suite: 46 tests (17 seguridad + 3 SQL injection + 18 unitarios + 8 existentes)
- Todos usan JUnit 5 + Mockito, sin base de datos real

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>